# Figma-Converter

./: .gitignore  README.md  __init__.py  build.sh  figma-converter.desktop  figma.py  gui.py  pyproject.toml  requirements.txt  setup.py
